--- a/pipelines/pipeline_downstream_27.yaml
+++ b/pipelines/pipeline_downstream_27.yaml
@@ -155,6 +155,8 @@ spec:
   finally:
     - name: notify-status-ds
       params:
+        - name: pipelineRunID
+          value: "$(context.pipelineRun.name)"
         - name: sendNotification
           value: "$(params.sendNotification)"
         - name: snapshot
@@ -163,13 +165,9 @@ spec:
           value: "$(tasks.status)"
         - name: hubOcLogin
           value: "$(tasks.checkout-hub-cluster.results.ocLogin)"
-        - name: mchStatus
-          value: "$(tasks.ensure-mch.status)"
-        - name: hubHd
-          value: "$(tasks.create-hosted-cluster.results.hdStatus)"
       taskRef:
         kind: Task
-        name: notify-status-ds
+        name: notify-status-ds-27
       workspaces:
         - name: source
           workspace: shared-workspace
