change clusterclaim name
Signed-off-by: Omar Farag <ofarag@redhat.com>

--- a/pipelinerun/template-ds.yaml
+++ b/pipelinerun/template-ds.yaml
@@ -19,7 +19,7 @@ spec:
           - name: clusterPoolName
             value: hypershift-ci-pool
           - name: clusterClaimName
-            value: hs-ci-ds-cluster-test0
+            value: hypershift-ci-ds-cluster
           - name: clusterClaimLifetime
             value: 12h
           - name: namespace
