filter 2.7.x instead of 2.7.3
Signed-off-by: Omar Farag <ofarag@redhat.com>

--- a/.github/workflows/fetch_and_push_tag.yaml
+++ b/.github/workflows/fetch_and_push_tag.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Fetch Tag
         # Get the latest 2.7.3 DOWNSTREAM tag
-        run: echo "tag=$(curl -X GET "https://quay.io/api/v1/repository/acm-d/acm-custom-registry/tag/" | jq .tags[].name | grep 2.7.3-DOWNSTREAM | head -1 | sed -e 's|\"||g')" >> $GITHUB_ENV
+        run: echo "tag=$(curl -X GET "https://quay.io/api/v1/repository/acm-d/acm-custom-registry/tag/" | jq .tags[].name | grep 2.7.*-DOWNSTREAM | head -1 | sed -e 's|\"||g')" >> $GITHUB_ENV
       - name: echo tag
         run: |
           echo "Using tag" ${{ env.tag }}
