--- a/pipelines/pipeline_upgrade_27_to_28.yaml
+++ b/pipelines/pipeline_upgrade_27_to_28.yaml
@@ -10,7 +10,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: deploy-downstream-acm-and-hosted-cluster-upgrade
+  name: deploy-downstream-acm-and-hosted-cluster
 spec:
   params:
     - name: clusterPoolName
@@ -20,7 +20,7 @@ spec:
     - name: clusterClaimName
       type: string
       description: The name of the clusterclaim to claim
-      default: "hs-ci-dev-cluster-test-change"
+      default: "hs-ci-dev-cluster"
     - name: clusterClaimLifetime
       type: string
       description: The length of the lifetime of the clusterclaim. Default 8h
@@ -31,7 +31,11 @@ spec:
       default: "open-cluster-management"
     - name: downstream
       type: string
-      description: The image DOWNSTREAM used to deploy ACM
+      description: The downstream DOWNSTREAM used to deploy ACM
+      default: "2.0-latest"
+    - name: targetSnapshot
+      type: string
+      description: The downstream tag used to upgrade ACM
       default: "2.0-latest"
     - name: sendNotification
       type: string
@@ -159,6 +163,18 @@ spec:
       workspaces:
         - name: source
           workspace: shared-workspace
+    - name: upgrade-acm
+      params:
+        - name: targetSnapshot
+          value: $(params.targetSnapshot)
+      runAfter:
+        - create-hosted-cluster
+      taskRef:
+        kind: Task
+        name: upgrade-acm
+      workspaces:
+        - name: source
+          workspace: shared-workspace
     - name: destroy-hosted-cluster
       params:
         - name: targetManagedCluster
@@ -168,7 +184,7 @@ spec:
         - name: infraID
           value: "$(tasks.create-hosted-cluster.results.infraID)"
       runAfter:
-        - create-hosted-cluster
+        - upgrade-acm
       taskRef:
         kind: Task
         name: destroy-hosted-cluster
@@ -192,7 +208,7 @@ spec:
           value: "$(tasks.checkout-hub-cluster.results.ocLogin)"
       taskRef:
         kind: Task
-        name: notify-status-upgrade
+        name: notify-status-ds-27
       workspaces:
         - name: source
           workspace: shared-workspace
