--- a/tasks/task_upgradeAcm.yaml
+++ b/tasks/task_upgradeAcm.yaml
@@ -33,6 +33,7 @@ spec:
           NEXT_MCE_VERSION=$(echo $NEXT_MCE_SNAPSHOT | sed -e "s/^\(.\{5\}\).*$/\1/")
           CHANNEL_MCE_VERSION=$(echo ${NEXT_MCE_SNAPSHOT} | sed -nr "s/v{0,1}([0-9]+\.[0-9]+)\.{0,1}[0-9]*.*/\1/p")
 
+          echo "NEXT_ACM_SNAPSHOT" $(inputs.params.targetSnapshot)
           echo "NEXT_VERSION" $NEXT_VERSION
           echo "STARTING_CSV" $STARTING_CSV
           echo "CHANNEL_VERSION" $CHANNEL_VERSION
@@ -57,12 +58,11 @@ spec:
               for i in `seq 1 30`; do
                   oc get po -n openshift-marketplace -lolm.catalogSource=multiclusterengine-catalog -oyaml
                   echo "VERSION IN POD"
-                  oc get po -n openshift-marketplace -lolm.catalogSource=multiclusterengine-catalog -oyaml | grep "$NEXT_MCE_SNAPSHOT"
+                  oc get po -n openshift-marketplace -lolm.catalogSource=multiclusterengine-catalog -oyaml | grep "$(inputs.params.targetSnapshot)"
                   if [ $? -eq 0 ]; then
                     break
                   fi
                   echo 'waiting for subscription pod to use new image'
-                  oc get po -n openshift-marketplace -lolm.catalogSource=multiclusterengine-catalog -oyaml | grep "$NEXT_MCE_SNAPSHOT"
                   echo 'patch again'
                   oc patch catalogsource multiclusterengine-catalog -n openshift-marketplace --type=json -p '[{"op":"replace","path":"/spec/image","value":"quay.io/acm-d/mce-custom-registry:'$(inputs.params.targetSnapshot)'"}]'
                   oc patch subscription.operators.coreos.com multicluster-engine -n $(inputs.params.mceNamespace) --type "json" -p "[{\"op\":\"replace\",\"path\": \"/spec/channel\",\"value\":\"stable-$CHANNEL_MCE_VERSION\"}]"
