--- a/tasks/task_notifyStatus_upgrade.yaml
+++ b/tasks/task_notifyStatus_upgrade.yaml
@@ -45,7 +45,7 @@ spec:
             STATUS="Not run, previous test failed"
           fi
 
-          MESSAGE=":chart_with_upwards_trend: Daily ACM Hypershift Upgrade Test :chart_with_upwards_trend:\nACM Upgrade: \`$(inputs.params.downstream)\` :fast_forward: \`$(inputs.params.targetSnapshot)\` \nStatus: $STATUS $STATUS_EMOJI\nPipeline Run: $PR_LINK"
+          MESSAGE=":chart_with_upwards_trend: Daily ACM Hypershift Upgrade Test :chart_with_upwards_trend:\nACM Upgrade: \`$(inputs.params.downstream)\` :fast_forward: \`$(inputs.params.targetSnapshot)\` \nOCP Version: \`4.12.14\` \nStatus: $STATUS $STATUS_EMOJI\nPipeline Run: $PR_LINK"
 
           if [[ "$(inputs.params.sendNotification)" == "true" ]]; then
             echo "Send notification to acm-hypershift-notifications slack channel"
