--- a/trigger/template.yaml
+++ b/trigger/template.yaml
@@ -14,6 +14,10 @@ spec:
       metadata:
         generateName: hs-ci-daily-build-
       spec:
+        timeouts:
+          pipeline: "2h0m0s"
+          tasks: "1h50m0s"
+          finally: "0h10m0s"
         serviceAccountName: pipeline
         pipelineRef:
           name: deploy-downstream-acm-and-hosted-cluster
@@ -32,7 +36,6 @@ spec:
             value: $(tt.params.upgradebuild)
           - name: sendNotification
             value: "true"
-        timeout: 1h30m0s
         workspaces:
           - name: shared-workspace
             persistentVolumeClaim:
