Added timeout for destroying hosted clusters to allow slack notif
Signed-off-by: Omar Farag <ofarag@redhat.com>

--- a/pipelines/pipeline_upgrade_27_to_28.yaml
+++ b/pipelines/pipeline_upgrade_27_to_28.yaml
@@ -232,6 +232,7 @@ spec:
       taskRef:
         kind: Task
         name: destroy-hosted-cluster
+      timeout: 25m
       workspaces:
         - name: source
           workspace: shared-workspace
