--- a/pipelineruns/test-run-downstream.yaml
+++ b/pipelineruns/test-run-downstream.yaml
@@ -4,10 +4,12 @@ metadata:
   generateName: test-downstream-run-
 spec:
   pipelineRef:
-    name: deploy-downstream-acm-and-hosted-cluster-upgrade
+    name: deploy-downstream-acm-and-hosted-cluster
   params:
     - name: downstream
       value: 2.7.3-DOWNSTREAM-2023-04-03-15-17-10
+    - name: targetSnapshot
+      value: 2.8.0-DOWNSTREAM-2023-05-15-23-47-00
   podTemplate:
     securityContext:
       fsGroup: 65532
